# MultiAgentSim

./: .gitignore  pyproject.toml
configs/: dev.yaml  mas.yaml
mas/envs/rps/: __init__.py  rps.py
mas/lib/env/: agent.py  entity.py  environment.py
mas/lib/experiment/: config.py  experiment.py  main.py
scripts/: activate.sh  clean.sh  run.sh
